--- a/main.html
+++ b/main.html
@@ -8,6 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<h1>SignUp Form</h1>
+		
+		<label for="name">Name</label>
+		<input id="name" type="text" required placeholder="Name">
+		<br>
+		<label for="email">Email</label>
+		<input id="email" type="email" required placeholder="Email">
+		<br>
+		<label for="">Gender</label>
+		<input id="gender_m" type="radio" name="gender">Male
+		<input id="gender_f" type="radio" name="gender">Female
+		<br>
+		<label for="cars">Car Brands</label>
+		<input id="cars" type="select" required placeholder="--Please choose an option--">
+		<br>
+		<label for="age">Age</label>
+		<input id="age" type="number" required placeholder="Age">
+		<br>
+		<label for="dob">DOB</label>
+		<input id="dob" type="date" required>
+		<br>
+		<label for="tel">Phone Number</label>
+		<input id="tel" type="tel" placeholder="xxx-xxx-xxxx">
+		<br>
+		<label for="password">Password</label>
+		<input id="password" type="password" required placeholder="Password">
+		<br>
+		<label for="tos">I agree with TOS</label>
+		<input id="tos" type="checkbox" required>
+		<br>
+		<button type="submit">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
