--- a/main.html
+++ b/main.html
@@ -22,7 +22,11 @@
 		<input id="gender_f" type="radio" name="gender">Female
 		<br>
 		<label for="cars">Car Brands</label>
-		<input id="cars" type="select" required placeholder="--Please choose an option--">
+		<select id="cars" required>
+			<option value="">--Please choose an option--</option>
+			<option value="1">Honda</option>
+			<option value="2">Maruti</option>
+		</select>
 		<br>
 		<label for="age">Age</label>
 		<input id="age" type="number" required placeholder="Age">
